fix(client): truncate texts in previews
*  add a ng-container for looping and move bookmark-preview selector to
the actual component template
* add a solution for truncate issues by specifying an explicit max-width

--- a/client/src/tailwind.scss
+++ b/client/src/tailwind.scss
@@ -37,14 +37,6 @@
   @apply font-medium text-2xl;
 }
 
-.bookmark-preview {
-  @apply p-4 break-words;
-
-  @screen md {
-    @apply w-1/3;
-  }
-}
-
 @tailwind utilities;
 
 .center-between {
